# messenger-full-stack

./: .gitignore  README.md
fastapi-backend/: .env  .env.example  .gitignore  docker-compose.yml  pyproject.toml
fastapi-backend/migrations/: env.py
fastapi-backend/migrations/versions/: 56e46a337ded_init.py  a6198b02ddb1_chat_tables.py  be2335a6b718_add_revoked_at_fix_refresh_tokens_.py
fastapi-backend/src/: main.py
fastapi-backend/src/conf/: config.py
fastapi-backend/src/controllers/: base_controller.py  conversation_controller.py  message_controller.py  refresh_roken_controller.py  user_controller.py
fastapi-backend/src/core/: depend_service.py
fastapi-backend/src/database/: db.py
fastapi-backend/src/models/: __init__.py  chat_model.py  user_model.py
fastapi-backend/src/routers/: auth_routes.py  conversation_routers.py  message_routers.py  upload_routers.py
fastapi-backend/src/schemas/: conversation.py  message.py  user_schema.py
fastapi-backend/src/services/: auth_service.py  conversation_service.py  message_service.py  refresh_token_service.py  user_service.py
fastapi-backend/src/sockets/: auth_ws.py  hub.py  manager.py  routes.py
fastapi-backend/src/storage/: cloudinary_adapter.py
messenger-client/: package.json  postcss.config.cjs
messenger-client/src/: App.tsx  config.ts  index.css  main.tsx
messenger-client/src/api/: auth.ts  conversations.ts  http.ts  keys.ts  message.ts  upload.ts  uploads.ts
messenger-client/src/components/: Layout.tsx  MessageInput.tsx  MessageList.tsx  RedirectIfAuth.tsx  RequireAuth.tsx
(+14 files in other folders)
